Update gradle wrapper, adventure fabric and paper-plugin.yml. Cleanup connection listener code.