@@ -88,8 +88,8 @@ public final class GameImpl implements Game {
     int abilityAmount = Registries.ABILITIES.size();
     int sequenceAmount = Registries.SEQUENCES.size();
     int collisionAmount = Registries.COLLISIONS.size();
-    plugin.logger().info(String.format("Found %d registered abilities (%d Sequences)!", abilityAmount, sequenceAmount));
-    plugin.logger().info(String.format("Found %d registered collisions!", collisionAmount));
+    plugin.logger().info("Found %d registered abilities (%d Sequences)!".formatted(abilityAmount, sequenceAmount));
+    plugin.logger().info("Found %d registered collisions!".formatted(collisionAmount));
     plugin.logger().info("Registered protection plugins: " + TextUtil.collect(Registries.PROTECTIONS));
     plugin.logger().info("Registered translations: " + TextUtil.collect(plugin.translationManager(), Locale::getLanguage));
   }
